assets/css/style.css
/* Resetting */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Hide Scrollbar */

* { scrollbar-width: none; } /* Gecko Engine */
::-webkit-scrollbar { width: 0px; } /* Webkit & Blink Engines */

@font-face {
    font-family: "Josefin Sans";
    font-weight: bold;
    src: url("../font/josefin-sans-bold.ttf") format("truetype");
}
@font-face {
    font-family: "Iosevka Aile";
    src: url("../font/iosevka-aile-regular.ttf") format("truetype");
}
@font-face {
    font-family: "Iosevka Aile";
    font-weight: bold;
    src: url("../font/iosevka-aile-bold.ttf") format("truetype");
}

body {
    font-family: "Iosevka Aile", sans-serif;
    background-color: #f3eee1;
    color: #5d6063;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

h2 {
    font-size: 35px;
    color: #588157;
    text-align: center;
}

h3 {
    font-size: 25px;
    color: #588157;
}

section, article {
    margin-bottom: 200px;
}

a {
    text-decoration: none;
    color: #5d6063;
}

a:hover {
    color: #e79c00;
}

button {
    margin: 0px;
    padding: 5px;
    font-weight: bold;
    color: #f3eee1;
    background-color: #588157;
    border: 0px;
    cursor: pointer;
}

.iconify {
    color: #f3eee1;
}

.container {
    margin: 0px 30px;
}

.card-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;

    border-top: 1px solid #5d6063;
    padding: 5px;
    margin-top: 10px;
}

/* NAVIGATION BAR */
.navbar {
    background-color: #588157;
    display: flex;
    align-items: center;

    position: fixed;
    top: 0px;
    left: 0px;
    z-index: 1;
    width: 100%;
    height: 50px;
}

.navbar > div {
    flex: 1 1 auto;
    width: 100%;
}

.navbar-left {
    display: flex;
    align-items: center;
    justify-content: flex-start;
}
.dropdown {
    display: block;
    position: relative;
}
#menu-btn {
    font-weight: bold;
    color: #f3eee1;
    margin-left: 5px;
    border: 2px solid #f3eee1;
    height: 30px;
    width: 100px;
}
.dropdown-content {
    display: none;
    width: 100px;
    position: absolute;
    margin-left: 5px;
    color: #588157;
    background-color: #f3eee1;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
    z-index: 1;
}
.dropdown-content > li {
    font-weight: bold;
    text-align: center;
    list-style-type: none;
    margin: 5px 0;
}

.navbar-center {
    display: flex;
    flex: 1 0 auto;
    align-items: center;
    justify-content: center;
}
.navbar-center > a {
    display: none;
    font-weight: bold;
    text-decoration: none;
    height: 30px;
    color: #f3eee1;
    padding: 5px;
    margin-left: 5px;
    border: 2px solid #f3eee1;
}
.navbar-center > a:first-child {
    margin-left: 0px;
}
.navbar-center > a:hover {
    background-color: #f3eee1;
    color: #588157;
}

.navbar-right {
    display: flex;
    flex: 1 1 auto;
    align-items: center;
    justify-content: flex-end; 
}
.navbar-right > div {
    display: flex;
    margin-right: 5px;
    border: 2px solid #f3eee1;
}
.lang-btn {
    font-size: 14px;

    /* avoids deforming for variable font */
    width: 30px;
    height: 26px; /* height of 30px minus 4px of border */
}
.lang-btn:hover {
    color: #588157!important; 
    background-color: #f3eee1; 
}

/* INRO */
h1 {
    font-family: "Josefin Sans", sans-serif;
    font-weight: bold;
    font-size: 130px;
    color: #f3eee1;
    margin-left: 15px;
}

.intro {
    font-family: "Josefin Sans", sans-serif;
    font-weight: bold;
    background-color: #588157;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 500px;
    margin-bottom: 100px;
    margin-top: 50px;
}

.intro > div {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.intro > h1 {
    margin-bottom: 60px;
}

.intro-code {
    margin: 0px;
    margin-bottom: 70px;
    font-size: 40px;
    color: #f3eee1;
}

.anagram {
    color: #f3eee1;
}

/* ABOUT ME */
#about-me {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 20px;
}

/* SKILLS */
.skill-card {
    display: flex;
    align-items: flex-start;

    margin: 10px;
    height: 200px;
    width: 300px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
    position: relative;
}

.skill-banner {
    flex: 1 0 auto;
    background-color: #588157;
    height: 100%;
    width: 54px;
}

.skill-card > article {
    margin: 10px;
}

.skill-desc {
    margin-left: 5px;
    margin-top: 10px;
}

.icon-html {
    position: absolute;
    top: 10px;
    left: -3px;
}

.icon-js {
    position: absolute;
    top: 15px;
    left: 4px;
}

.icon-bootstrap {
    position: absolute;
    top: 15px;
    left: 2px;
}

.icon-cert {
    position: absolute;
    top: 10px;
    left: -8px;
}

/* PROJECTS */
.project-card {
    height: 300px;
    width: 300px;
    margin: 10px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
}

.project-card > img {
    width: 300px;
    margin: 0px;
}

.project-card > section {
    margin: 6px;
}

.project-link {
    display: block;
    margin-top: 3px;
}

.project-link > .iconify-inline {
    color: #5d6063;
}

/* CONTACT INFO */
#contact-info {
    color: #f3eee1;
    background-color: #588157;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 300px;

    font-size: 25px;
}

#contact-info > a {
    margin: 0 20px;
    color: #f3eee1;
}
#contact-info > a:hover {
    color: #F4B752;
}

/* TABLET LAYOUT */
@media only screen and (min-width: 755px) {
    h1 {
        margin-left: 25px;
    }

    .dropdown {
        display: none;
    }

    .navbar-center > a {
        display: block;
    }

    .navbar-center > a {
        margin-left: 20px;
    }

    .navbar-right > div {
        margin-right: 20px;
    }

    .card-container {
        padding: 20px;
        flex-direction: row;
    }

    #about-me > p {
        width: 750px;
    }
}

/* DESKTOP LAYOUT */
@media only screen and (min-width: 935px) {
    .container {
        margin: 0px 100px;
    }

    .card-container {
        padding: 40px;
    }
}

